# Homeworks_DE

UA_DATA-ENGINEERING_KHOROSHYKH-2-hw/: .gitignore  README.md  SETUP.md  pyproject.toml
UA_DATA-ENGINEERING_KHOROSHYKH-2-hw/lesson-02-python/: knowledge.md
UA_DATA-ENGINEERING_KHOROSHYKH-2-hw/lesson-02-python/code/: README.md  lesson_02_pct.ipynb
UA_DATA-ENGINEERING_KHOROSHYKH-2-hw/lesson-02-python/code/data/reference/: taxi_zone_lookup.parquet
UA_DATA-ENGINEERING_KHOROSHYKH-2-hw/lesson-02-python/homework/: CONTRACTS.md  README.md  pyproject.toml  run.py
UA_DATA-ENGINEERING_KHOROSHYKH-2-hw/lesson-02-python/homework/pipeline/: __init__.py  bronze.py  config.py  gold.py  landing.py  silver.py
UA_DATA-ENGINEERING_KHOROSHYKH-2-hw/lesson-02-python/homework/tests/: conftest.py  test_outputs.py
