[project]
name = "de-course-materials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
  "boto3>=1.34.0",  # L09 EMR provisioning + L10 S3 demos
  "pyiceberg[sql-sqlite,pyiceberg-core]>=0.7.0",  # L10 local PyIceberg demo
  "confluent-kafka[avro,schemaregistry]>=2.3",  # L16/L17 Kafka producer/consumer + Schema Registry
  "dbt-duckdb>=1.10.1",
  "dbt-spark[session]>=1.9",  # L13 dbt-on-Spark solution/demo (method: session)
  "duckdb>=1.5.3",
  "duckdb-engine>=0.17.0",
  "fastavro>=1.9.0",
  "geopandas>=1.0.0",
  "great-expectations>=1.18.2",
  "icecream>=2.2.0",
  "jupysql>=0.11.1",
  "jupyter>=1.1.1",
  "jupytext>=1.19.3",
  "matplotlib>=3.9.0",
  "pandas>=2.2,<3",  # pandas-on-Spark (pyspark 4.1) is incompatible with pandas 3.0 (removed pandas.core.common._builtin_table)
  "pandera>=0.21.0",
  "polars>=1.40.1",
  "pyarrow>=24.0.0",
  "pyspark>=4.1.1",
  "python-pptx>=1.0.2",
  "dlt[duckdb,sql_database]>=1.7.0",
  "requests>=2.32.0",
  "seaborn>=0.13.0",
  "shapely>=2.0.0",
  "basedpyright>=1.39.9",
]

[dependency-groups]
dev = ["ruff>=0.15.14", "pytest>=8.3.0"]
